[gd_scene load_steps=8 format=2]

[ext_resource path="res://BaseMenu/MenuTheme.tres" type="Theme" id=1]
[ext_resource path="res://BaseMenu/Menu.gd" type="Script" id=2]
[ext_resource path="res://BaseMenu/SubMenuTheme.tres" type="Theme" id=3]
[ext_resource path="res://BaseMenu/BusSlider.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=5]
resource_name = "HideSubMenu"
tracks/0/type = "value"
tracks/0/path = NodePath("SubMenu:margin_right")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ -50, 400 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainMenuMask:color")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 0.21, 0.21, 0.21, 0.913725 ), Color( 0.21, 0.21, 0.21, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainMenuMask:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SubMenu:margin_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 400 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainMenuMask:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.21, 0.21, 0.21, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainMenuMask:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "ShowSubMenu"
tracks/0/type = "value"
tracks/0/path = NodePath("SubMenu:margin_right")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ 400, -50 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainMenuMask:color")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 0.21, 0.21, 0.21, 0 ), Color( 0.211765, 0.211765, 0.211765, 0.913725 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainMenuMask:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/HideSubMenu = SubResource( 5 )
anims/RESET = SubResource( 3 )
anims/ShowSubMenu = SubResource( 4 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.192157, 0, 0.207843, 1 )

[node name="MainMenu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 30.0
alignment = 1

[node name="Title" type="Label" parent="MainMenu"]
margin_top = 132.0
margin_right = 1024.0
margin_bottom = 214.0
theme = ExtResource( 1 )
text = "Title"
align = 1
valign = 1

[node name="Separator" type="Control" parent="MainMenu"]
margin_top = 218.0
margin_right = 1024.0
margin_bottom = 318.0
rect_min_size = Vector2( 0, 100 )

[node name="PlayButton" type="Button" parent="MainMenu"]
margin_left = 412.0
margin_top = 322.0
margin_right = 612.0
margin_bottom = 358.0
grow_horizontal = 2
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
text = "Play"

[node name="SettingsButton" type="Button" parent="MainMenu"]
margin_left = 412.0
margin_top = 362.0
margin_right = 612.0
margin_bottom = 398.0
grow_horizontal = 2
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
text = "Settings"

[node name="QuitButton" type="Button" parent="MainMenu"]
margin_left = 412.0
margin_top = 402.0
margin_right = 612.0
margin_bottom = 438.0
grow_horizontal = 2
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
text = "Quit"

[node name="MainMenuMask" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.21, 0.21, 0.21, 0 )

[node name="SubMenu" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 400.0
grow_horizontal = 0
alignment = 1

[node name="Title" type="Label" parent="SubMenu" groups=["Settings"]]
margin_top = 185.0
margin_right = 400.0
margin_bottom = 236.0
theme = ExtResource( 3 )
text = "Settings"
align = 2

[node name="Separator" type="Control" parent="SubMenu"]
margin_top = 240.0
margin_right = 400.0
margin_bottom = 265.0
rect_min_size = Vector2( 0, 25 )

[node name="Main" parent="SubMenu" groups=["Settings"] instance=ExtResource( 4 )]
margin_top = 269.0
margin_bottom = 292.0
label_text = "Main Volume"
bus_name = "Master"
highlight_color = Color( 0.68, 0.498667, 0, 1 )

[node name="Music" parent="SubMenu" groups=["Settings"] instance=ExtResource( 4 )]
margin_top = 296.0
margin_bottom = 319.0
label_text = "Music"
bus_name = "Music"
highlight_color = Color( 0.68, 0.498667, 0, 1 )

[node name="Effects" parent="SubMenu" groups=["Settings"] instance=ExtResource( 4 )]
margin_top = 323.0
margin_bottom = 346.0
label_text = "Sound Effects"
bus_name = "SFX"
highlight_color = Color( 0.68, 0.498667, 0, 1 )

[node name="Separator2" type="Control" parent="SubMenu"]
margin_top = 350.0
margin_right = 400.0
margin_bottom = 375.0
rect_min_size = Vector2( 0, 25 )

[node name="BackButton" type="Button" parent="SubMenu" groups=["Settings"]]
margin_left = 300.0
margin_top = 379.0
margin_right = 400.0
margin_bottom = 415.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 8
theme = ExtResource( 3 )
text = "Back"

[connection signal="pressed" from="MainMenu/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MainMenu/SettingsButton" to="." method="_on_submenu_button_pressed" binds= [ "Settings" ]]
[connection signal="pressed" from="MainMenu/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="SubMenu/BackButton" to="." method="close_submenu"]
